--- a/signin/index.html
+++ b/signin/index.html
@@ -6,7 +6,15 @@
     <title>Авторизація</title>
 </head>
 <body>
-    
+    <header>
+        <hr>
+        <div>
+            <p>Book Store / mamartam</p>
+
+        </div>
+        <hr>
+    </header>
+
     
 </body>
 </html>
