--- a/signin/index.html
+++ b/signin/index.html
@@ -14,6 +14,18 @@
         </div>
         <hr>
     </header>
+    <section>
+        <div>
+            <img src="img/avatar.png" alt="avatar">
+        </div>
+        <div>
+            <form action="">
+                <label for="username">Username</label><br>
+                <input type="text" name="username" id="username"><br>
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+    </section>
 
     
 </body>
