--- a/specific-book/index.html
+++ b/specific-book/index.html
@@ -10,6 +10,10 @@
         width: 50px;
         height: 50px;
     }
+    .cover{
+        width: 150px;
+        height: 200px;
+    }
     
 </style>
 <body>
@@ -27,6 +31,11 @@
 
         <hr>
     </header>
+    <section>
+        <div>
+            <img class="cover" src="img/cover.png" alt="cover">
+        </div>
+    </section>
 
     
 </body>
