Added information about book

--- a/specific-book/index.html
+++ b/specific-book/index.html
@@ -35,6 +35,26 @@
         <div>
             <img class="cover" src="img/cover.png" alt="cover">
         </div>
+        <div>
+            <p><strong>Book name:</strong> Eloquent Javascript</p>
+            <p><strong>Book author:</strong> Marijn Haverbeke</p>
+            <p><strong>Book level:</strong> Beginner</p>
+            <p><strong>Book tags:</strong> core</p>
+            <p>Price, $52.72</p>
+        </div>
+        <div>
+            <label for="count">Count</label>
+            <input type="number" id="count"><br>
+            <p>Total price - </p>
+        </div>
+        <div>
+            <button type="button">Add to card</button>
+        </div>
+        <div>
+            <p><strong>Description:</strong>A book providing an introduction on 
+                JavaScript Languague and programming in general.
+            </p>
+        </div>
     </section>
 
     
