--- a/specific-book/index.html
+++ b/specific-book/index.html
@@ -3,19 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Specific book</title>
 </head>
-<style>
-    .img{
-        width: 50px;
-        height: 50px;
-    }
-    .cover{
-        width: 150px;
-        height: 200px;
-    }
-    
-</style>
 <body>
     <header>
         <hr>
