--- a/specific-book/index.html
+++ b/specific-book/index.html
@@ -29,24 +29,30 @@
         <hr>
     </header>
     <section>
-        <div>
-            <img class="cover" src="img/cover.png" alt="cover">
-        </div>
-        <div>
-            <p><strong>Book name:</strong> Eloquent Javascript</p>
-            <p><strong>Book author:</strong> Marijn Haverbeke</p>
-            <p><strong>Book level:</strong> Beginner</p>
-            <p><strong>Book tags:</strong> core</p>
-
-        </div>
-        <div>
-            <p>Price, $52.72</p>
-            <label for="count">Count</label>
-            <input type="number" id="count"><br>
-            <p>Total price - </p>
+        <div class="section-main">
             <div>
-                <button type="button">Add to card</button>
+                <img class="cover" src="img/cover.png" alt="cover">
             </div>
+            <div>
+                <p><strong>Book name:</strong> Eloquent Javascript</p>
+                <p><strong>Book author:</strong> Marijn Haverbeke</p>
+                <p><strong>Book level:</strong> Beginner</p>
+                <p><strong>Book tags:</strong> core</p>
+
+            </div>
+            <div >
+                <div class="information-about-book">
+                    <p>Price, $52.72</p>
+                    <label for="count">Count</label>
+                    <input type="number" id="count"><br>
+                    <p>Total price - </p>
+                    <div>
+                        <button type="button">Add to card</button>
+                    </div>
+
+                </div>
+            </div>
+
         </div>
 
         <div>
