--- a/specific-book/index.html
+++ b/specific-book/index.html
@@ -5,14 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+NG+Modern:wght@100..400&display=swap"
+        rel="stylesheet">
     <title>Specific book</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playwrite+NG+Modern:wght@100..400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header>
         <hr>
         <div class="header-filling">
-            <div>
+            <div class="siteName-creator">
                 <p>Book Store / mamartam</p>
 
             </div>
@@ -40,7 +49,7 @@
                 <p><strong>Book tags:</strong> core</p>
 
             </div>
-            <div >
+            <div>
                 <div class="information-about-book">
                     <p>Price, $52.72</p>
                     <label for="count">Count</label>
