--- a/signin/index.html
+++ b/signin/index.html
@@ -3,17 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+NG+Modern:wght@100..400&display=swap"
+        rel="stylesheet">
     <title>Авторизація</title>
 </head>
 <body>
     <header>
         <hr>
-        <div>
-            <p>Book Store / mamartam</p>
+        <div class="header-filling">
+            <div class="siteName-creator">
+                <p>Book Store / mamartam</p>
 
+            </div>
         </div>
+
         <hr>
     </header>
+
+
     <section>
         <div>
             <img src="img/avatar.png" alt="avatar">
