--- a/signin/index.html
+++ b/signin/index.html
@@ -25,14 +25,14 @@
 
 
     <section>
-        <div>
+        <div class="avatar">
             <img src="img/avatar.png" alt="avatar">
         </div>
-        <div>
-            <form action="">
-                <label for="username">Username</label><br>
-                <input type="text" name="username" id="username"><br>
-                <button type="submit">Submit</button>
+        <div >
+            <form action="" class="form-for-signin">
+                <label class="label-username" for="username">Username</label><br>
+                <input class="input-username" type="text" name="username" id="username" placeholder="Type your name"><br>
+                <button class="bitton-sign-in" type="submit">Submit</button>
             </form>
         </div>
     </section>
